<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_main"
        android:title="@string/title_main"
        android:icon="@drawable/home_white_24dp" />

    <item
        android:id="@+id/navigation_teams"
        android:title="@string/title_teams"
        android:icon="@drawable/teams_white_24dp" />

<!--    <item-->
<!--        android:id="@+id/navigation_books"-->
<!--        android:title="@string/title_books"-->
<!--        android:icon="@drawable/book_white_24dp" />-->

    <item
        android:id="@+id/navigation_distances"
        android:title="@string/title_distances"
        android:icon="@drawable/route_white_24dp" />

    <item
        android:id="@+id/navigation_results"
        android:title="@string/title_results"
        android:icon="@drawable/list_white_24dp" />

    <item
        android:id="@+id/navigation_photos"
        android:title="@string/title_photos"
        android:icon="@drawable/photo_white_24dp" />

</menu>